--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "element-plus": "^2.9.3",
     "lodash-es": "^4.17.21",
     "pinia": "^2.3.0",
+    "vite-plugin-html": "^3.2.2",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
