--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "lib": ["ESNext", "DOM", "DOM.Iterable"],
     "skipLibCheck": true,
     "baseUrl": ".",
-    "types": ["element-plus/global"],
+    "types": ["node", "element-plus/global"],
     "paths": {
       "@/*": [
         "src/*"
