--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@tauri-apps/cli": "^2",
     "@types/node": "^22.10.7",
     "@vitejs/plugin-vue": "^5.2.1",
+    "@vue/language-plugin-pug": "^2.2.0",
     "eslint": "^9.18.0",
     "eslint-plugin-vue": "^9.32.0",
     "pug": "^3.0.3",
