--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -22,5 +22,5 @@ tauri = { version = "2", features = [] }
 tauri-plugin-opener = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-chrono = "0.4"
-
+chrono = "0.4.39"
+sysinfo = "0.33.1"
