--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -24,3 +24,12 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 chrono = "0.4.39"
 sysinfo = "0.33.1"
+
+[dependencies.windows]
+version = "0.59"
+features = [
+    "Win32_System",
+    "Win32_System_Threading",
+    "Win32_NetworkManagement",
+    "Win32_NetworkManagement_WiFi",
+]
