--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -8,5 +8,5 @@
     "allowSyntheticDefaultImports": true,
     "strict": true
   },
-  "include": ["vite.config.ts", "utils/*.ts", "scripts/*.ts", "src/*.auto-imports.ts"]
+  "include": ["vite.config.ts", "utils/*.ts", "scripts/*.ts", "src/*.auto-imports.d.ts"]
 }
