--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -28,6 +28,7 @@ shlex = "1.3.0"
 logcall = "0.1.11"
 log = "0.4.25"
 regex = "1.11.1"
+tokio = "1.43.0"
 
 # [dependencies.windows]
 # version = "0.59.0"
