--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -30,13 +30,13 @@ log = "0.4.25"
 regex = "1.11.1"
 tokio = "1.43.0"
 
-# [dependencies.windows]
-# version = "0.59.0"
-# features = [
-#     "Win32_System",
-#     "Win32_System_SystemServices",
-#     "Win32_Globalization",
-# ]
+[dependencies.windows]
+version = "0.59.0"
+features = [
+    "Win32_System",
+]
+# "Win32_System_SystemServices",
+# "Win32_Globalization",
 # "Win32_System_Threading",
 # "Win32_NetworkManagement",
 # "Win32_NetworkManagement_WiFi",
